fixed color and spacing on alert button

--- a/frontend/src/assets/NavBar.css
+++ b/frontend/src/assets/NavBar.css
@@ -91,7 +91,7 @@
     color: #a6a6a6;
 }
 
-.aboutButton, .loginButton {
+.aboutButton, .loginButton, .alertButton {
     border-radius: 1rem;
     margin-right: 1rem;
     padding: 0.5rem 2rem 0.5rem 2rem;
@@ -99,6 +99,10 @@
     color: black;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+}
+.alertButton{
+    padding: 0.25rem 1rem 0.25rem 1rem;
+    margin-right: 0;
 }
 
 .aboutButton:hover,.loginButton:hover{
@@ -120,5 +124,6 @@
     height: 3rem;
     font-size: 2rem;
     color: white;
-    margin-right: 1rem;
+    margin-right: 1.5rem;
 }
+
